--- a/portlets/google-drive-quick-links-portlet/docroot/WEB-INF/src/content/Language.properties
+++ b/portlets/google-drive-quick-links-portlet/docroot/WEB-INF/src/content/Language.properties
@@ -3,6 +3,8 @@ view-header-message=Welcome to My Google Drive Quick Links
 no-links-message=There are no quick links
 portlet-user-not-logged=To use this portlet you must be logged into the portal. Please login and try again.
 no-keys-message=Please enter your Developer Key and Client Id in Control Panel
+add-link-error=Failed to add the link. Please try again.
+delete-link-error=Failed to delete the link. Please try again.
 
 #buttons
 select-button=Select File
