UI changes, code improvements

--- a/portlets/google-drive-quick-links-portlet/docroot/WEB-INF/liferay-plugin-package.properties
+++ b/portlets/google-drive-quick-links-portlet/docroot/WEB-INF/liferay-plugin-package.properties
@@ -1,7 +1,7 @@
 name=Google Drive Quick Links
 module-group-id=rivetlogic
 module-incremental-version=1
-tags=
+tags=google, drive, quick links, documents, docs, files
 short-description=
 change-log=
 page-url=http://rivetlogic.com
@@ -13,8 +13,7 @@ portal-dependency-jars=\
 long-description=
 liferay-versions=6.2.0+,6.2.10+
 
-security-manager-enabled=generate
-#security-manager-enabled=true
+security-manager-enabled=true
 
 security-manager-files-read=${liferay.web.portal.dir}/WEB-INF/lib/velocity.jar
 
