App Company details

--- a/portlets/google-drive-quick-links-portlet/docroot/WEB-INF/liferay-plugin-package.properties
+++ b/portlets/google-drive-quick-links-portlet/docroot/WEB-INF/liferay-plugin-package.properties
@@ -10,7 +10,14 @@ licenses=GPLv3
 portal-dependency-jars=\
     jstl-api.jar,\
     jstl-impl.jar
-long-description=
+long-description=Google Drive Quick Links app consists of a portlet which uses the Google Picker Iframe. \
+The portlet allows the user to select the files through the Google Picker Iframe. The google picker uses OAuth\
+ and none of the user credentials are kept in the portlet application. The only information stored is the current \
+ Liferay userId along with the document Id, name and url to make available the quick links from the portal.<br>\
+ Developed by <a href="http://www.rivetlogic.com">Rivet Logic Corporation</a>\<br>\
+ <a href="http://wiki.rivetlogic.com/display/LRA/">App Documentation</a> 
+
+
 liferay-versions=6.2.0+,6.2.10+
 
 security-manager-enabled=true
